# HTTP-Web-Server

./: README.md
http-server/: CMakeLists.txt  README.md  build.bat  test.txt
http-server/src/: main.cpp
http-server/src/config/: Config.cpp  Config.h
http-server/src/http/: Request.cpp  Request.h  Response.cpp  Response.h
http-server/src/server/: Server.h
http-server/src/socket/: Socket.cpp  Socket.h
http-server/src/utils/: FileHandler.cpp  FileHandler.h  Logger.cpp  Logger.h
http-server/www/: index.html  script.js  style.css
